stop margin collapse

--- a/css-box-model/box-styles.css
+++ b/css-box-model/box-styles.css
@@ -15,4 +15,5 @@ h1 {
 p {
     padding: 20px 0px 20px 10px; /* top right bottom left */
     margin-bottom: 50px; 
+    margin-top: 25px;
 }
